--- a/core/res/res/values/public.xml
+++ b/core/res/res/values/public.xml
@@ -3679,6 +3679,12 @@
   <public type="style" name="Widget.DeviceDefault.MediaRouteButton" id="0x010301d7" />
   <public type="style" name="Widget.DeviceDefault.Light.MediaRouteButton" id="0x010301d8" />
 
+
+<!--=============================================================================
+    RESOURCES ADDED BY KLOZZ JESUS
+   ================================================ =============================-->
+  <public type="attr" name="layout_marginStart" id="0x010103b5" />
+
 <!-- ===============================================================
    Resources added in version 10 of CyanogenMod
    =============================================================== -->
