--- a/packages/SystemUI/res/layout/status_bar_expanded.xml
+++ b/packages/SystemUI/res/layout/status_bar_expanded.xml
@@ -21,6 +21,7 @@
 
 <com.android.systemui.statusbar.ExpandedView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="@drawable/bg"
     android:focusable="true"
     android:descendantFocusability="afterDescendants"
     >
