--- a/packages/SystemUI/res/layout/status_bar_tracking.xml
+++ b/packages/SystemUI/res/layout/status_bar_tracking.xml
@@ -27,9 +27,9 @@
     >
 
     <View
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:layout_weight="1"
+         android:layout_width="0.0px"
+         android:layout_height="0.0px"
+         android:layout_weight="1.0"
          android:background="@drawable/shade_bg"
          />
 
@@ -39,11 +39,11 @@
         android:orientation="vertical"
         >
         <ImageView
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:scaleType="fitXY"
-            android:src="@drawable/status_bar_close_on"
+            android:src="@drawable/trans"
             />
 
     </com.android.systemui.statusbar.CloseDragHandle>
