White UI usable in public
Change-Id: Icfa4c9f9248590d7db4879de85b7376d3b7baa2c

--- a/core/res/res/values/public.xml
+++ b/core/res/res/values/public.xml
@@ -3957,4 +3957,7 @@
 
   <!-- Stylus gestures -->
   <java-symbol type="bool" name="config_stylusGestures" />
+
+  <!-- White UI Style -->
+  <public type="color" name="holo_white_dark" id="0x0106001c" />
 </resources>
