--- a/core/res/res/values/colors.xml
+++ b/core/res/res/values/colors.xml
@@ -186,6 +186,8 @@
     <color name="holo_orange_dark">#ffff8800</color>
     <!-- A really bright Holo shade of blue -->
     <color name="holo_blue_bright">#ff00ddff</color>
+    <!-- A dark Holo shade of white -->
+    <color name="holo_white_dark">#ffffffff</color>
 
     <drawable name="notification_template_icon_bg">#3333B5E5</drawable>
     <drawable name="notification_template_icon_low_bg">#0cffffff</drawable>
